# guide

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  requirements.in  requirements.txt
.github/: renovate.json5
.github/workflows/: codeql-js.yml  codeql-py.yml  custom-emoji.yml  publish.yml  ruby-version.yml
docs/: index.md
docs/cutie-city/: code-of-conduct.md  custom-emoji.md  custom-themes.md  server-blocklist.md
docs/javascripts/: custom-emoji.js  global.js  migrating-servers.js
docs/self-hosting/: development-setup.md  object-storage.md
docs/stylesheets/: custom-emoji.css  global.css  material.css
docs/the-fediverse/: fedi-etiquette.md  migrating-servers.md
overrides/partials/: source-file.html
python/: LICENSE  MANIFEST.in  pyproject.toml  setup.py
python/cutiecityguide/: __init__.py  custom_emoji.py  emoji_script.py  ruby_version.py  utils.py
python/cutiecityguide/assets/: emoji_index.json
scripts/: custom-emoji.py
